# costroid

./: .dockerignore  .env.example  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.md  Makefile  PROGRESS.md  README.md  RELEASING.md  SECURITY.md  deny.toml  dist-workspace.toml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml  dco.yml  demo.yml  docs.yml  (+2 more)
apps/bar/: Cargo.toml  README.md
apps/bar/assets/: JetBrainsMono-LICENSE.txt
apps/bar/src/: anomalies.rs  app.rs  banner.rs  budget.rs  fonts.rs  forecast.rs  format.rs  glyph.rs  main.rs  meter.rs  overview.rs  providers.rs  refresh.rs  severity.rs  tabs.rs  tray.rs
apps/cli/: Cargo.toml
apps/cli/src/: bench.rs  breakeven.rs  config.rs  connect.rs  main.rs  reconcile.rs  render.rs  setup.rs  tui.rs
apps/cli/src/snapshots/: costroid__render__tests__snapshot_activity_ascii.snap  costroid__render__tests__snapshot_activity_braille.snap  costroid__render__tests__snapshot_activity_plain.snap  costroid__render__tests__snapshot_alerts_command_braille.snap  costroid__render__tests__snapshot_alerts_command_plain.snap  costroid__render__tests__snapshot_alerts_now_banner_ascii.snap  costroid__render__tests__snapshot_alerts_now_banner_braille.snap  costroid__render__tests__snapshot_alerts_now_banner_plain.snap  costroid__render__tests__snapshot_anomalies_ascii.snap  costroid__render__tests__snapshot_anomalies_braille.snap  costroid__render__tests__snapshot_anomalies_clean_plain.snap  costroid__render__tests__snapshot_anomalies_insufficient_history_plain.snap  costroid__render__tests__snapshot_anomalies_no_api_usage_plain.snap  costroid__render__tests__snapshot_anomalies_no_usage_plain.snap  costroid__render__tests__snapshot_anomalies_plain.snap  costroid__render__tests__snapshot_budget_ascii.snap  costroid__render__tests__snapshot_budget_braille.snap  costroid__render__tests__snapshot_budget_no_budget_set.snap  costroid__render__tests__snapshot_budget_plain.snap  costroid__render__tests__snapshot_forecast_ascii.snap  costroid__render__tests__snapshot_forecast_braille.snap  costroid__render__tests__snapshot_forecast_eta_unavailable_plain.snap  costroid__render__tests__snapshot_forecast_insufficient_data_plain.snap  costroid__render__tests__snapshot_forecast_no_usage_ascii.snap  costroid__render__tests__snapshot_forecast_plain.snap  costroid__render__tests__snapshot_frontier_braille.snap  costroid__render__tests__snapshot_frontier_plain.snap  costroid__render__tests__snapshot_frontier_plain_no_api.snap  costroid__render__tests__snapshot_history_ascii.snap  costroid__render__tests__snapshot_history_braille.snap  costroid__render__tests__snapshot_history_empty.snap  costroid__render__tests__snapshot_history_plain.snap  costroid__render__tests__snapshot_models_ascii.snap  costroid__render__tests__snapshot_models_braille.snap  costroid__render__tests__snapshot_models_no_api_usage.snap  costroid__render__tests__snapshot_models_plain.snap  costroid__render__tests__snapshot_now_all_arms_ascii.snap  costroid__render__tests__snapshot_now_all_arms_braille.snap  costroid__render__tests__snapshot_now_all_arms_braille_no_ansi.snap  costroid__render__tests__snapshot_now_all_arms_plain.snap  (+26 more)
apps/cli/tests/: alerts_cli.rs  bench_cli.rs  breakeven_cli.rs  docs_presence.rs  import_cli.rs  methodology_crosscheck.rs  offline.rs  post_m3b_refresh.rs  publish_ladder_topo.rs  samples_datasets.rs  store_replay.rs
apps/server/: Cargo.toml  README.md
apps/server/assets/: README.md  costroid.css
apps/server/src/: data.rs  main.rs  web.rs
contracts/: openapi.yaml
crates/costroid-config/: Cargo.toml
crates/costroid-config/src/: lib.rs
crates/costroid-connect/: Cargo.toml
crates/costroid-connect/src/: anthropic.rs  fetch.rs  http.rs  lib.rs  openai.rs  test_support.rs
crates/costroid-core/: Cargo.toml
crates/costroid-core/bench/: benchmarks.v1.json
crates/costroid-core/pricing/: README.md  litellm-prices.v1.json  litellm-prices.v1.json.sha256  pricing.v1.json  pricing.v1.json.sha256
crates/costroid-core/src/: bench.rs  breakeven.rs  lib.rs  reconcile.rs  vendor_report.rs
crates/costroid-core/tests/: claude_dedup_cost.rs  claude_sidechain_golden.rs  codex_golden_cost.rs  v12_round_trip_golden.rs
crates/costroid-focus/: Cargo.toml
crates/costroid-focus/src/: lib.rs
crates/costroid-power/: Cargo.toml
crates/costroid-power/models/: README.md  gemma4.v1.json  gemma4.v1.json.sha256
crates/costroid-power/profiles/: README.md  hardware.v1.json  hardware.v1.json.sha256
crates/costroid-power/src/: cost.rs  error.rs  harness.rs  lib.rs  measured.rs  mode.rs  models.rs  profile.rs  runner.rs  sampler.rs
crates/costroid-providers/: Cargo.toml
crates/costroid-providers/src/: focus_import.rs  lib.rs
crates/costroid-store/: Cargo.toml  README.md
crates/costroid-store/src/: lib.rs
docs/: ARCHITECTURE.md  COSTROID-NEXT.md  DATA-MODEL.md  DESIGN-SYSTEM.md  M1-PLAN.md  M2-PLAN.md  M3-PLAN.md  M3B-PHASE2-FLIP-PLAN.md  M3B-PLAN.md  M4-PLAN.md  M5-PLAN.md  M6-PLAN.md  POST-M3B-REFRESH.md  PRODUCT-PLAN.md  ROADMAP.md  STATUSLINE-CAPTURE-BRIEF.md  benchmark-gemma4-vs-cloud.md  cybersecurity-policy.md  decisions.md  limitations.md  methodology.md  security.md  strategy.md
docs-site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
fixtures/: README.md
pricing/: pricing.v1.json
samples/: README.md
scripts/: check_benchmarks.sh  check_doc_stamps.sh  check_focus_conformance.py  check_focus_json_csv_equivalence.py  check_power_profiles.sh  check_pricing_snapshots.sh  demo-budget.mjs  demo-manifest.mjs  demo-screenshot.mjs  focus_conformance.sh  focus_known_failures.txt  focus_known_failures_v12.txt  install.sh  offline_acceptance.sh  refresh_litellm_pricing.py
web/: .prettierignore  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
(+615 files in other folders)
