[workspace]
members = [
    "apps/cli",
    "crates/costroid-core",
    "crates/costroid-focus",
    "crates/costroid-providers",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/Costroid/costroid"
homepage = "https://github.com/Costroid/costroid"

[workspace.dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
csv = "=1.4.0"
ratatui = "=0.30.0"
rust_decimal = { version = "=1.42.0", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["raw_value"] }
thiserror = "=2.0.18"

# Internal deps carry both `path` (used for local workspace builds) and `version`
# (required by crates.io: a path-only dependency is rejected on publish). Cargo
# uses the path locally and records only the version in the published manifest.
costroid-core = { path = "crates/costroid-core", version = "0.2.0" }
costroid-focus = { path = "crates/costroid-focus", version = "0.2.0" }
costroid-providers = { path = "crates/costroid-providers", version = "0.2.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
