[workspace]
members = [
    "apps/cli",
    "crates/costroid-connect",
    "crates/costroid-core",
    "crates/costroid-focus",
    "crates/costroid-providers",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/Costroid/costroid"
homepage = "https://github.com/Costroid/costroid"
readme = "README.md"

[workspace.dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
csv = "=1.4.0"
ratatui = "=0.30.0"
rust_decimal = { version = "=1.42.0", features = ["serde"] }
# The sanctioned HTTP stack (T9a) — linked ONLY by `costroid-connect`, which itself is
# linked only behind the apps' off-by-default `connect` feature. `ureq` is pinned
# exact with default features OFF and precisely two features on:
#   * `rustls-no-provider` — rustls TLS *without* `webpki-roots` (CDLA-Permissive-2.0,
#     not on deny.toml's allowlist; the client uses OS-native trust roots via
#     `rustls-native-certs` instead, per the T9a pin);
#   * `_ring` — rustls's `ring` crypto provider (ureq's own `rustls` feature =
#     `rustls-no-provider` + `_ring` + `rustls-webpki-roots`; we take the first two).
#     `_ring` is an ureq-internal feature name, which the exact `=` pin keeps stable.
# `json`/`gzip` stay off (body parsing is the T9b adapters'; no pinned API needs gzip).
rustls-native-certs = "=0.8.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["raw_value"] }
thiserror = "=2.0.18"
ureq = { version = "=3.3.0", default-features = false, features = [
    "rustls-no-provider",
    "_ring",
] }

# Internal deps carry both `path` (used for local workspace builds) and `version`
# (required by crates.io: a path-only dependency is rejected on publish). Cargo
# uses the path locally and records only the version in the published manifest.
costroid-connect = { path = "crates/costroid-connect", version = "0.5.0" }
costroid-core = { path = "crates/costroid-core", version = "0.5.0" }
costroid-focus = { path = "crates/costroid-focus", version = "0.5.0" }
costroid-providers = { path = "crates/costroid-providers", version = "0.5.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
