[workspace]
members = [
    "apps/bar",
    "apps/cli",
    # The local HTTP API + web UI is a SEPARATE binary (costroid-server), never linked into
    # `costroid`/`costroid-bar` — `tiny_http` is name-banned in the CLI/bar offline gate, so the
    # server gets its own reviewed per-binary allowlist + a loopback-only runtime proof (⚑ A1,
    # §6.11). It lives under apps/ (binaries) mirroring `apps/bar`; the package is `costroid-server`.
    "apps/server",
    "crates/costroid-config",
    "crates/costroid-connect",
    "crates/costroid-core",
    "crates/costroid-focus",
    # The local-inference economics engine: the three-source PowerSampler + the energy/cost model
    # (§3.1.B). All Linux/GPU code behind the off-by-default `power` feature (R1); a leaf crate
    # (no internal deps) that `costroid-core` will consume at M3.
    "crates/costroid-power",
    "crates/costroid-providers",
    # The local SQLite usage store (M1). A metadata-only (R4) persistent ledger of FOCUS
    # rows; SQLite via `rusqlite` (`bundled`) — DuckDB was rejected at M0. A leaf crate
    # (deps: costroid-focus). Reachable two ways: behind the CLI's off-by-default `store`
    # feature, AND linked unconditionally by `costroid-server` (M5; the server reads the
    # stored ledger). Never in the DEFAULT `costroid`/`costroid-bar` graph.
    "crates/costroid-store",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/Costroid/costroid"
homepage = "https://github.com/Costroid/costroid"
readme = "README.md"

[workspace.dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive"] }
crossterm = "=0.29.0"
csv = "=1.4.0"
ratatui = "=0.30.0"
rust_decimal = { version = "=1.42.0", features = ["serde"] }
# The local SQLite usage store (`costroid-store`, M1) — bundled C amalgamation (no system
# SQLite required), MSRV-1.88 clean, all-permissive transitive licenses (deny-allowlist
# clean). Behind the off-by-default `store` feature; NOT reachable from the default
# CLI/bar/server graph. DuckDB was rejected at M0; SQLite is locked.
rusqlite = { version = "=0.37.0", features = ["bundled"] }
# The sanctioned HTTP stack (T9a) — linked ONLY by `costroid-connect`, which itself is
# linked only behind the apps' off-by-default `connect` feature. `ureq` is pinned
# exact with default features OFF and precisely two features on:
#   * `rustls-no-provider` — rustls TLS *without* `webpki-roots` (CDLA-Permissive-2.0,
#     not on deny.toml's allowlist; the client uses OS-native trust roots via
#     `rustls-native-certs` instead, per the T9a pin);
#   * `_ring` — rustls's `ring` crypto provider (ureq's own `rustls` feature =
#     `rustls-no-provider` + `_ring` + `rustls-webpki-roots`; we take the first two).
#     `_ring` is an ureq-internal feature name, which the exact `=` pin keeps stable.
# `json`/`gzip` stay off (body parsing is the T9b adapters'; no pinned API needs gzip).
rustls-native-certs = "=0.8.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["raw_value"] }
thiserror = "=2.0.18"
# The local HTTP server for `costroid-server` (the separate web-UI binary, ⚑ A1 / §6.11).
# A non-`tokio` BLOCKING server — matching the repo's blocking-`ureq` philosophy and sidestepping
# the async-runtime ban entirely. It is an INBOUND local listener (the server binds 127.0.0.1
# only); it is NOT an outbound client, pulls no TLS/async-runtime, and is reachable ONLY from
# `costroid-server` (never the CLI/bar), which carries its own reviewed `SERVER_ALLOWED` allowlist
# + the runtime loopback-only proof. M0 spike: 31-pkg tree, all permissive, builds on MSRV 1.88.
tiny_http = "=0.12.0"
# Parse-only TOML for the shared user config (`costroid-config`, T14/T20 `[budget]`/`[alerts]`).
# Permissive (MIT/Apache-2.0), no network, deny-allowlist-clean; read-only — Costroid never writes
# config, so default features are off and only `parse` + `serde` (deserialize) are enabled (the
# `display`/`toml_writer` serialize half is left out). Moved here from `apps/cli` in T20 so both
# apps' config crate shares one pin.
toml = { version = "=1.1.2", default-features = false, features = [
    "parse",
    "serde",
] }
ureq = { version = "=3.3.0", default-features = false, features = [
    "rustls-no-provider",
    "_ring",
] }

# Internal deps carry both `path` (used for local workspace builds) and `version`
# (required by crates.io: a path-only dependency is rejected on publish). Cargo
# uses the path locally and records only the version in the published manifest.
costroid-config = { path = "crates/costroid-config", version = "0.7.0" }
costroid-connect = { path = "crates/costroid-connect", version = "0.7.0" }
costroid-core = { path = "crates/costroid-core", version = "0.7.0" }
costroid-focus = { path = "crates/costroid-focus", version = "0.7.0" }
# `costroid-power` is `publish = true` since M6 T9 (the crates.io library flip) and sits in the
# publish ladder before `costroid`; deps record the version + use the path locally.
costroid-power = { path = "crates/costroid-power", version = "0.7.0" }
costroid-providers = { path = "crates/costroid-providers", version = "0.7.0" }
# `costroid-store` is `publish = true` since M6 T9 (the crates.io library flip); it is consumed
# only behind the CLI's off-by-default `store` feature + by `costroid-server`, and sits in the
# publish ladder before `costroid`/`costroid-server`.
costroid-store = { path = "crates/costroid-store", version = "0.7.0" }

# The egui taskbar GUI stack (Step 6 / `apps/bar` only — the default `costroid` CLI
# never links these). All MIT/Apache-2.0, no webview/Tauri. The `glow` (OpenGL)
# renderer is chosen over `wgpu` — it trims the transitive tree and licenses cleaner
# (no `naga`/`wgpu-hal`/graphics-backend stack). Several default features are OFF:
#   * `accesskit` — egui's Linux AccessKit backend (`accesskit_unix`) pulls `zbus`
#     → `async-io`. As of T21 it is turned ON, but via `apps/bar`'s own default
#     `accesskit` feature (`apps/bar/Cargo.toml`) rather than here — so the offline
#     gate can resolve the bar graph with AND without it to enforce the reviewed
#     `BAR_ACCESSKIT_ALLOWED` local-IPC allowlist (the `async-io`/`zbus` subtree is
#     local AT-SPI/D-Bus IPC, admitted only for the bar + backed by the runtime
#     no-`AF_INET` proof; the CLI graph stays async-io-free). ARCHITECTURE
#   * `default_fonts` — pulls `epaint_default_fonts`, whose license carries `OFL-1.1`
#     + `Ubuntu-font-1.0` (not on the deny allowlist). The taskbar bundles its own
#     JetBrains Mono (Apache-2.0) instead, so the bundled fonts are unneeded.
# `persistence` gives eframe window size/position memory across sessions (pulls `ron`
# + `home`, both permissive, no network). Pinned exact (`=`), matching the convention.
eframe = { version = "=0.34.3", default-features = false, features = [
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
# `default-features = false` drops egui's own `default_fonts` feature too — otherwise the
# direct egui dep re-enables `epaint_default_fonts` (OFL-1.1/Ubuntu-font-1.0) that the
# eframe-side trim removed. The taskbar supplies its own JetBrains Mono.
egui = { version = "=0.34.3", default-features = false }
# gtk3-rs — only the Linux tray links it (its own GTK loop on a dedicated thread).
# Same major.minor `tray-icon` depends on, so the graph unifies to one GTK.
gtk = "=0.18.2"
tray-icon = "=0.24.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
