[package]
name = "costroid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local-first, FOCUS-native cost and limit visibility for your AI coding tools, right in your terminal."
keywords = ["finops", "cost", "tui", "cli", "ai"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "costroid"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
costroid-core.workspace = true
costroid-providers.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true

[dev-dependencies]
costroid-focus.workspace = true
insta = { version = "=1.47.2", default-features = false }

[lints]
workspace = true
