[package]
name = "costroid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local-first, FOCUS-native cost and limit visibility for your AI coding tools, right in your terminal."
keywords = ["finops", "cost", "tui", "cli", "ai"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "costroid"
path = "src/main.rs"

[features]
# The connections subsystem is opt-in and off by default: the default build never
# links `costroid-connect`, so it makes no network calls and touches no secret. The
# taskbar (`apps/bar`, Step 6) will carry the same gate. T8 landed the keychain
# credential store and T9a the generic authorized-host HTTP client behind this
# feature; nothing in the CLI calls the crate until the connect/disconnect commands
# land in T10 — so even a `--features connect` build performs zero network calls.
connect = ["dep:costroid-connect"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
costroid-connect = { workspace = true, optional = true }
costroid-core.workspace = true
costroid-providers.workspace = true
crossterm.workspace = true
ratatui.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true

[dev-dependencies]
costroid-focus.workspace = true
insta = { version = "=1.47.2", default-features = false }

[lints]
workspace = true
