[package]
name = "costroid-server"
version.workspace = true
edition.workspace = true
# Inherits the workspace MSRV (1.88): the M0 spike confirmed `tiny_http` 0.12 builds on 1.88
# (31-pkg tree, all permissive). The ŌÜæ Readiness gate (A4) lets this binary raise its own
# `rust-version` later if the M5 web stack demands it; today it does not.
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Costroid local HTTP API + web UI ŌĆö a loopback-only (127.0.0.1) server over the local cost ledger. No outbound network."
keywords = ["finops", "cost", "server", "localhost", "ai"]
categories = ["command-line-utilities", "web-programming::http-server"]
# Published to crates.io (M6 T9 / D3 ŌĆö the M5 server/UI has landed): `cargo install costroid-server`.
# Its place in the publish ladder is `ŌĆ” ŌåÆ costroid ŌåÆ server ŌåÆ bar` (RELEASING.md); a topo-sort test
# guards that order against this dep graph (server depends on costroid-core + costroid-store).
publish = true

[[bin]]
name = "costroid-server"
path = "src/main.rs"

[dependencies]
# A binary lives in apps/ ŌåÆ `anyhow` is the sanctioned error type here (library crates use
# `thiserror`). The server is local-only: it links `tiny_http` (inbound loopback listener) and
# reads the stored ledger via `costroid-store` + `costroid-core` (M5). It pulls NO HTTP client, NO
# TLS, NO async runtime, and NEVER `costroid-power` (no coreŌåÆpower edge) ŌĆö the per-binary
# `SERVER_ALLOWED` allowlist in `apps/cli/tests/offline.rs` enforces exactly that (incl. a
# no-`costroid-power` negative assert), and `scripts/offline_acceptance.sh` proves the loopback-only
# / no-egress behavior at runtime. `serde`/`serde_json`/`chrono`/`rust_decimal` are already in the
# CLI's default graph (via `costroid-core`), so they add nothing to the server-delta; only
# `costroid-store` adds the reviewed local-SQLite subtree (T7).
anyhow.workspace = true
chrono.workspace = true
costroid-core.workspace = true
costroid-store.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true

[dev-dependencies]
# Test-only: build 3-lane FOCUS fixtures via `focus_records_from_canonical` (core, public) +
# `CanonicalEvent`/`LocalRunEvent` (providers). Not linked into the shipped binary.
costroid-providers.workspace = true

[lints]
workspace = true

# cargo-dist per-package release config (M6 T9 / D3 ŌĆö mirrors apps/bar). The web UI/API has
# shipped (M5); M6 flips it into the release pipeline.
[package.metadata.dist]
# In the cargo-dist pipeline now.
dist = true
# Ship the loopback server as downloadable binary ARCHIVES + crates.io
# (`cargo install costroid-server`) only ŌĆö no one-click npm/Homebrew (or curl|sh / irm)
# installers (those stay CLI-only, `costroid`). Mirrors apps/bar.
installers = []
# Explicit 5 targets, mirroring apps/bar: Linux gnu x86_64/aarch64, macOS x86_64/aarch64,
# Windows x86_64. NO `x86_64-unknown-linux-musl` ŌĆö the server need not static-link (it links
# only `tiny_http`: no libdbus/GTK/TLS/async-runtime), so it builds clean on every target and
# `precise-builds = true` keeps the release runners libdbus-free.
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]
