[package]
name = "costroid-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared, read-only TOML config (budget targets + opt-in alerts) for the Costroid CLI and taskbar."
documentation = "https://docs.rs/costroid-config"
keywords = ["finops", "cost", "config", "toml", "ai"]
categories = ["config", "command-line-utilities"]

[dependencies]
costroid-core.workspace = true
rust_decimal.workspace = true
serde.workspace = true
toml.workspace = true

[lints]
workspace = true
