[package]
name = "costroid-connect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Costroid's opt-in network + credential boundary: the single crate where all HTTP and OS-keychain access lives, feature-gated and off by default."
documentation = "https://docs.rs/costroid-connect"
keywords = ["finops", "cost", "keychain", "oauth", "ai"]
categories = ["command-line-utilities", "authentication"]

# The ONLY crate allowed a keychain (T8) or network (T9) dependency, and only ever
# linked behind the consumer's `connect` feature (off by default — see apps/cli). The
# default/local-only `costroid` binary never links this crate, so it ships no keychain
# code; the deny.toml `wrappers` guard + apps/cli/tests/offline.rs keep that honest.
#
# Linux backend choice (T8): `keyring`'s SYNC Secret Service (`dbus-secret-service`,
# blocking C libdbus) + pure-Rust crypto (`crypto-rust`) — deliberately NOT the
# `async-secret-service` (zbus) path, so NO async runtime is pulled and `async-io`
# stays globally banned even under `--features connect`. The cost is the C build-deps
# `libdbus-1-dev` + `libsecret-1-dev` (installed in CI; PRODUCT-PLAN Step 4 §161).
# HTTP (`ureq` + `rustls`) + the `core`/`focus` deps land in T9.
[dependencies]
keyring = { version = "=3.6.3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "crypto-rust",
] }
secrecy = "=0.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
