[package]
name = "costroid-focus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "FOCUS 1.3 Cost and Usage export primitives: typed records and JSON/CSV serialization for AI tool billing data."
documentation = "https://docs.rs/costroid-focus"
keywords = ["focus", "finops", "cost", "billing", "csv"]
categories = ["finance", "encoding"]

[dependencies]
chrono.workspace = true
csv.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
